# Multi-Device-Audio-Sync

./: .gitignore  Caddyfile  Cargo.toml  README.md  airlink.db  cert.pem  patch.js  player_state.json  readme.md  rewrite_main.py  test_acme.rs  test_sender.js  test_tokio.rs  test_udp.rs  test_webrtc.rs
.cert_cache_prod/: cached_account_PP2Qu-R_X6kTMF1VED-lEceyHIqWbeVT77jOpCd7R3Q  cached_cert_f29j4imuzDA9Duh4R_gs2TsnZV5QDPSTTT-8zs-_jMQ
src/: auth.rs  db.rs  main.rs  main.rs.bak  player.rs
static/: admin.html  controller.html  index.html  login.html  manager.html  sender.html
