[package]
name        = "multi-device-audio-sync"
version     = "0.1.0"
edition     = "2021"

[dependencies]
anyhow      = "1.0"
axum        = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
bytes       = "1.11"
cpal        = "0.15"
dashmap     = "6"
futures     = "0.3"
opus        = "0.3"
rcgen       = "0.13"
rustls      = { version = "0.23", features = ["ring"], default-features = false }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
tokio       = { version = "1", features = ["full"] }
tower-http  = { version = "0.6", features = ["fs"] }
uuid        = { version = "1", features = ["v4"] }
webrtc      = "0.11"
webrtc-ice  = "0.11"
