[package]
name        = "multi-device-audio-sync"
version     = "0.1.0"
edition     = "2021"

[dependencies]
anyhow      = "1.0"
axum        = { version = "0.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
bcrypt = "0.19.2"
bytemuck = "1.25.0"
bytes       = "1.11"
cpal        = "0.15"
dashmap     = "6"
futures     = "0.3"
opus        = "0.3"
rusqlite = { version = "0.40.1", features = ["bundled"] }
rustls-acme = { version = "0.15.3", features = ["axum", "tokio"] }

serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
tokio       = { version = "1", features = ["full"] }
tokio-stream = "0.1.18"
tower-http  = { version = "0.6", features = ["fs"] }
uuid        = { version = "1", features = ["v4"] }

[patch.crates-io]
rustls-acme = { path = "../rustls-acme" }
